syntax = "proto3";

package yandex.cloud.priv.mdb.v1.support;

import "google/api/annotations.proto";
import "yandex/cloud/priv/mdb/v1/support/resolve_cluster.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/mdb/v1/support;mdb_support";

service ClusterResolveService {
  rpc Get (ClusterResolveRequest) returns (Cluster) {
    option (google.api.http) = { get: "/mdb/v1/support/clusters/resolve" };
  }
}

message ClusterResolveRequest {
  string cluster_id = 1;
}
